Pontoon: Update Basque (eu) localization of Firefox Co-authored-by: julen <julenx@gmail.com>

--- a/eu/devtools/client/debugger.properties
+++ b/eu/devtools/client/debugger.properties
@@ -686,6 +686,17 @@ inlinePreview.show.label=Erakutsi barneko aurrebista
 # for hiding the inline preview block
 inlinePreview.hide.label=Ezkutatu barneko aurrebista
 
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=Araztailearen ezarpenak
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+settings.disableJavaScript.label=Desgaitu JavaScript
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=JavaScript desgaitzen du (berritu egin behar da)
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 preview.noProperties=Propietaterik ez
@@ -740,6 +751,10 @@ watchpoints.getWatchpoint=Propietatea eskuratzea
 # LOCALIZATION NOTE (watchpoints.setWatchpoint): This is the text that appears in the
 # watchpoints submenu to add a "set" watchpoint on an object property.
 watchpoints.setWatchpoint=Propietatea ezartzea
+
+# LOCALIZATION NOTE (watchpoints.getOrSetWatchpoint): This is the text that appears in the
+# watchpoints submenu to add a "set" watchpoint on an object property.
+watchpoints.getOrSetWatchpoint=Propietatearen 'get' edo 'set'
 
 # LOCALIZATION NOTE (watchpoints.removeWatchpoint): This is the text that appears in the
 # context menu to delete a watchpoint on an object property.
