--- a/eu/browser/installer/nsisstrings.properties
+++ b/eu/browser/installer/nsisstrings.properties
@@ -9,12 +9,6 @@
 # Accesskeys are defined by prefixing the letter that is to be used for the
 # accesskey with an ampersand (e.g. &).
 
-# Do not replace $BrandShortName, $BrandFullName, or $BrandFullNameDA with a
-# custom string and always use the same one as used by the en-US files.
-# $BrandFullNameDA allows the string to contain an ampersand (e.g. DA stands
-# for double ampersand) and prevents the letter following the ampersand from
-# being used as an accesskey.
-
 # Do not replace $BrandShortName, $BrandProductName, $BrandFullName,
 # or $BrandFullNameDA with a custom string and always use the same one as used
 # by the en-US files.
@@ -27,16 +21,15 @@
 
 INSTALLER_WIN_CAPTION=$BrandShortName instalatzailea
 
-# The \n in the next two strings can be moved or deleted as needed to make
-# the string fit in the 3 lines of space available.
-STUB_CLEANUP_PAVEOVER_HEADER=$BrandShortName lehendik ere instalatuta dago.\nEgunera dezagun.
-STUB_CLEANUP_REINSTALL_HEADER=$BrandShortName aurretik instalatuta egon da.\nEskura dezagun kopia berri bat.
-
 STUB_CLEANUP_PAVEOVER_HEADER2=$BrandShortName lehendik ere instalatuta dago. Egunera dezagun.
 STUB_CLEANUP_REINSTALL_HEADER2=$BrandShortName aurretik instalatuta egon da. Eskura dezagun kopia berri bat.
 STUB_CLEANUP_PAVEOVER_BUTTON=&Eguneratu
 STUB_CLEANUP_REINSTALL_BUTTON=Berr&instalatu
 STUB_CLEANUP_CHECKBOX_LABEL=Be&rrezarri ezarpen lehenetsiak eta kendu gehigarri zaharrak errendimendu optimorako
+
+STUB_CLEANUP_PAVEOVER_BUTTON2=Eguneratu
+STUB_CLEANUP_REINSTALL_BUTTON2=Berrinstalatu
+STUB_CLEANUP_CHECKBOX_LABEL2=Berrezarri ezarpen lehenetsiak eta kendu gehigarri zaharrak errendimendu optimorako
 
 STUB_INSTALLING_LABEL2=Orain instalatzen…
 # The \n in the next string is intended to force a nice-looking layout in en-US
@@ -44,6 +37,8 @@ STUB_INSTALLING_LABEL2=Orain instalatzen…
 # number of lines available.
 STUB_INSTALLING_HEADLINE=Eman lehentasuna pribatutasunari.\nEgin bat $BrandProductName(r)ekin.
 STUB_INSTALLING_BODY=Eskuratu pribatutasuna lehenesten dituzten gure beste produktuak eta ikasi nola nabigatu modu argi eta seguruago batean.
+STUB_INSTALLING_HEADLINE2=Zure ezarpenak abiadura, pribatutasun eta segurtasunerako optimizatzen.
+STUB_INSTALLING_BODY2=$BrandShortName une batetik bestera prest egongo da.
 STUB_BLURB_FIRST1=Inoizko $BrandShortName azkar eta berehalakoena
 STUB_BLURB_SECOND1=Orrien kargatze eta fitxen arteko aldatze azkarragoa
 STUB_BLURB_THIRD1=Nabigatze pribatu boteretsua
