Pontoon: Update Dutch (nl) localization of Firefox Co-authored-by: Mark Heijl <markh@babelzilla.org>

--- a/nl/devtools/client/webconsole.properties
+++ b/nl/devtools/client/webconsole.properties
@@ -226,12 +226,30 @@ webconsole.menu.selectAll.accesskey=A
 # Label used for a context-menu item displayed for object/variable logs. Clicking on it
 # opens the webconsole sidebar for the logged variable.
 webconsole.menu.openInSidebar.label=Openen in zijbalk
+
+# LOCALIZATION NOTE (webconsole.menu.openInSidebar.label)
+# Label used for a context-menu item displayed for object/variable logs. Clicking on it
+# opens the webconsole sidebar for the logged variable.
+webconsole.menu.openInSidebar.label1=Object in zijbalk inspecteren
 webconsole.menu.openInSidebar.accesskey=z
 
 # LOCALIZATION NOTE (webconsole.menu.exportClipboard.label)
 # Label used for a context-menu item displayed on the output. Clicking on it
 # copies the entire output of the console to the clipboard.
 webconsole.menu.exportClipboard.label=Zichtbare berichten naar klembord exporteren
+
+# LOCALIZATION NOTE (webconsole.menu.timeWarp.label)
+# Label used for a context-menu item displayed for any log. Clicking on it will
+# jump to the execution point where the log item was generated.
+webconsole.menu.timeWarp.label=Hierheen springen
+
+# LOCALIZATION NOTE (webconsole.jumpButton.tooltip)
+# Label used for the tooltip on the "jump" button in the console. It's displayed when
+# the user recorded execution with WebReplay, is now paused in the debugger, and hover a
+# message in the console output. Clicking on it will jump to the execution point where the
+# log item was generated.
+# Parameters: %S is the level of the message.
+webconsole.jumpButton.tooltip=%S - Hierheen springen
 
 # LOCALIZATION NOTE (webconsole.menu.exportSubmenu.label)
 # Label used for a context-menu item displayed on the output. Clicking on it
@@ -248,19 +266,6 @@ webconsole.menu.exportSubmenu.exportCliboard.label=Klembord
 # opens a file picker to allow the user save a file containing
 # the output of the console.
 webconsole.menu.exportSubmenu.exportFile.label=Bestand
-
-# LOCALIZATION NOTE (webconsole.menu.timeWarp.label)
-# Label used for a context-menu item displayed for any log. Clicking on it will
-# jump to the execution point where the log item was generated.
-webconsole.menu.timeWarp.label=Hierheen springen
-
-# LOCALIZATION NOTE (webconsole.jumpButton.tooltip)
-# Label used for the tooltip on the "jump" button in the console. It's displayed when
-# the user recorded execution with WebReplay, is now paused in the debugger, and hover a
-# message in the console output. Clicking on it will jump to the execution point where the
-# log item was generated.
-# Parameters: %S is the level of the message.
-webconsole.jumpButton.tooltip=%S - Hierheen springen
 
 # LOCALIZATION NOTE (webconsole.clearButton.tooltip)
 # Label used for the tooltip on the clear logs button in the console top toolbar bar.
@@ -391,11 +396,6 @@ webconsole.console.settings.menu.item.autocomplete.tooltip=Als u deze optie insc
 webconsole.console.settings.menu.item.enablePersistentLogs.label=Registraties aanhouden
 # LOCALIZATION NOTE (webconsole.console.settings.menu.item.enablePersistentLogs.tooltip)
 webconsole.console.settings.menu.item.enablePersistentLogs.tooltip=Als u deze optie inschakelt, zal de uitvoer niet elke keer worden gewist als u naar een nieuwe pagina gaat
-
-# LOCALIZATION NOTE (webconsole.console.settings.menu.item.eagerEvaluation.label)
-webconsole.console.settings.menu.item.eagerEvaluation.label=Gretige evaluatie
-# LOCALIZATION NOTE (webconsole.console.settings.menu.item.eagerEvaluation.tooltip)
-webconsole.console.settings.menu.item.eagerEvaluation.tooltip=Als u deze optie inschakelt, wordt de invoer gretig geëvalueerd terwijl u deze intypt
 
 # LOCALIZATION NOTE (webconsole.console.settings.menu.item.instantEvaluation.label)
 webconsole.console.settings.menu.item.instantEvaluation.label=Directe evaluatie
