--- a/nl/devtools/client/debugger.properties
+++ b/nl/devtools/client/debugger.properties
@@ -687,6 +687,7 @@ inlinePreview.show.label=Inlinevoorbeeld tonen
 inlinePreview.hide.label=Inlinevoorbeeld verbergen
 
 # LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=Debugger-instellingen
 
 # LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
 # label for disabling JavaScript
@@ -694,6 +695,7 @@ settings.disableJavaScript.label=JavaScript uitschakelen
 
 # LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
 # tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=Schakelt JavaScript uit (vernieuwen vereist)
 
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
