--- a/sr/dom/chrome/accessibility/AccessFu.properties
+++ b/sr/dom/chrome/accessibility/AccessFu.properties
@@ -130,6 +130,8 @@ main           =       главни
 navigation     =       навигација
 search         =       претрага
 
+region         =       област
+
 # LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
 # Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
