--- a/sr/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/sr/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -5,9 +5,10 @@
 # LOCALIZATION NOTE: These strings are used for startup/profile problems and the profile manager.
 
 # Application not responding
-# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
+# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker2, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
 restartTitle=Затвори %S
 restartMessageNoUnlocker=%S је већ покренут, али се не одазива. Да бисте отворили нови прозор, прво морате затворити постојећи %S процес или рестартовати систем.
+restartMessageNoUnlocker2=%S је већ покренут, али не одговара. Да бисте користили %S, прво морате затворити постојећи %S процес, поново покренути уређај или користити други профил.
 restartMessageUnlocker=%S је већ покренут, али се не одазива. Стари процес %S мора бити прекинут да бисте отворили нови прозор.
 restartMessageNoUnlockerMac=Копија %S-а је већ отворена. Само један %S може да буде отворен.
 restartMessageUnlockerMac=Примерак програма %S је већ покренут. Покренути примерак %S ће бити затворен да би се отворио нови примерак.
