--- a/nl/suite/chrome/mailnews/messenger.properties
+++ b/nl/suite/chrome/mailnews/messenger.properties
@@ -372,6 +372,8 @@ newMailAlert_message=#1 heeft #2 nieuw bericht ontvangen;#1 heeft #2 nieuwe beri
 
 # For the Quota tab in the mail folder properties dialog
 quotaUsedFree=%S van %S KB gebruikt
+
+# For the Quota tab in the mail folder properties dialog
 quotaPercentUsed=%S%% vol
 
 # for message views
@@ -477,6 +479,9 @@ mailServerLoginFailedTitleWithAccount=Aanmelding bij account ‘%S’ mislukt
 mailServerLoginFailed2=Aanmelden bij server %1$S met gebruikersnaam %2$S is mislukt.
 mailServerLoginFailedRetryButton=&Opnieuw proberen
 mailServerLoginFailedEnterNewPasswordButton=&Nieuw wachtwoord invoeren
+
+confirmMarkAllFoldersReadTitle=Alle mappen als gelezen markeren
+confirmMarkAllFoldersReadMessage=Weet u zeker dat u alle berichten in alle mappen van deze account als gelezen wilt markeren?
 
 # LOCALIZATION NOTE (junkBarMessage): %S is the brandname
 junkBarMessage=%S beschouwt dit bericht als ongewenst.
