Pontoon: Update Frisian (fy-NL) localization of Firefox Co-authored-by: Fjoerfoks <fryskefirefox@gmail.com>

--- a/fy-NL/devtools/client/debugger.properties
+++ b/fy-NL/devtools/client/debugger.properties
@@ -686,6 +686,17 @@ inlinePreview.show.label=Ynlinefoarbyld toane
 # for hiding the inline preview block
 inlinePreview.hide.label=Ynlinefoarbyld ferstopje
 
+# LOCALIZATION NOTE (settings.button.label): Label for Settings button
+settings.button.label=Debugger-ynstellingen
+
+# LOCALIZATION NOTE (settings.disableJavaScript.label): Context menu item
+# label for disabling JavaScript
+settings.disableJavaScript.label=JavaScript útskeakelje
+
+# LOCALIZATION NOTE (settings.disableJavaScript.tooltip): Context menu item
+# tooltip for disabling JavaScript
+settings.disableJavaScript.tooltip=Skeakelet JavaScript út (ferfarskje fereaske)
+
 # LOCALIZATION NOTE (preview.noProperties): Label shown in the preview
 # popup when there are no properties to show.
 preview.noProperties=Gjin eigenskippen
