Pontoon: Update Thai (th) localization of Firefox Co-authored-by: niruhn <niruhn@gmail.com> Co-authored-by: aefgh39622@gmail.com <aefgh39622@gmail.com>

--- a/th/devtools/client/jsonview.properties
+++ b/th/devtools/client/jsonview.properties
@@ -32,6 +32,8 @@ jsonViewer.Copy=คัดลอก
 # LOCALIZATION NOTE (jsonViewer.ExpandAll): Label for expanding all nodes
 jsonViewer.ExpandAll=ขยายทั้งหมด
 
+jsonViewer.ExpandAllSlow=ขยายทั้งหมด (ช้า)
+
 # LOCALIZATION NOTE (jsonViewer.CollapseAll): Label for collapsing all nodes
 jsonViewer.CollapseAll=ยุบทั้งหมด
 
