Pontoon: Update Thai (th) localization of Firefox Co-authored-by: niruhn <niruhn@gmail.com> Co-authored-by: aefgh39622@gmail.com <aefgh39622@gmail.com>

--- a/th/devtools/client/webconsole.properties
+++ b/th/devtools/client/webconsole.properties
@@ -192,6 +192,12 @@ webconsole.menu.openInNetworkPanel.accesskey=ผ
 webconsole.menu.resendNetworkRequest.label=ส่งคำขอใหม่
 webconsole.menu.resendNetworkRequest.accesskey=ส
 
+# LOCALIZATION NOTE (webconsole.menu.openNodeInInspector.label)
+# Label used for a context-menu item displayed for DOM Node logs. Clicking on it will 
+# reveal that specific DOM Node in the Inspector.
+webconsole.menu.openNodeInInspector.label=เปิดเผยในตัวตรวจสอบ
+webconsole.menu.openNodeInInspector.accesskey=Q
+
 # LOCALIZATION NOTE (webconsole.menu.storeAsGlobalVar.label)
 # Label used for a context-menu item displayed for object/variable logs. Clicking on it
 # creates a new global variable pointing to the logged variable.
@@ -220,12 +226,29 @@ webconsole.menu.selectAll.accesskey=ล
 # Label used for a context-menu item displayed for object/variable logs. Clicking on it
 # opens the webconsole sidebar for the logged variable.
 webconsole.menu.openInSidebar.label=เปิดในแถบข้าง
+
+# LOCALIZATION NOTE (webconsole.menu.openInSidebar.label)
+# Label used for a context-menu item displayed for object/variable logs. Clicking on it
+# opens the webconsole sidebar for the logged variable.
 webconsole.menu.openInSidebar.accesskey=น
 
 # LOCALIZATION NOTE (webconsole.menu.exportClipboard.label)
 # Label used for a context-menu item displayed on the output. Clicking on it
 # copies the entire output of the console to the clipboard.
 webconsole.menu.exportClipboard.label=ส่งออกข้อความที่มองเห็นไปยังคลิปบอร์ด
+
+# LOCALIZATION NOTE (webconsole.menu.timeWarp.label)
+# Label used for a context-menu item displayed for any log. Clicking on it will
+# jump to the execution point where the log item was generated.
+webconsole.menu.timeWarp.label=กระโดดมาที่นี่
+
+# LOCALIZATION NOTE (webconsole.jumpButton.tooltip)
+# Label used for the tooltip on the "jump" button in the console. It's displayed when
+# the user recorded execution with WebReplay, is now paused in the debugger, and hover a
+# message in the console output. Clicking on it will jump to the execution point where the
+# log item was generated.
+# Parameters: %S is the level of the message.
+webconsole.jumpButton.tooltip=%S - กระโดดมาที่นี่
 
 # LOCALIZATION NOTE (webconsole.menu.exportSubmenu.label)
 # Label used for a context-menu item displayed on the output. Clicking on it
@@ -242,19 +265,6 @@ webconsole.menu.exportSubmenu.exportCliboard.label=คลิปบอร์ด
 # opens a file picker to allow the user save a file containing
 # the output of the console.
 webconsole.menu.exportSubmenu.exportFile.label=ไฟล์
-
-# LOCALIZATION NOTE (webconsole.menu.timeWarp.label)
-# Label used for a context-menu item displayed for any log. Clicking on it will
-# jump to the execution point where the log item was generated.
-webconsole.menu.timeWarp.label=กระโดดมาที่นี่
-
-# LOCALIZATION NOTE (webconsole.jumpButton.tooltip)
-# Label used for the tooltip on the "jump" button in the console. It's displayed when
-# the user recorded execution with WebReplay, is now paused in the debugger, and hover a
-# message in the console output. Clicking on it will jump to the execution point where the
-# log item was generated.
-# Parameters: %S is the level of the message.
-webconsole.jumpButton.tooltip=%S - กระโดดมาที่นี่
 
 # LOCALIZATION NOTE (webconsole.clearButton.tooltip)
 # Label used for the tooltip on the clear logs button in the console top toolbar bar.
@@ -386,13 +396,10 @@ webconsole.console.settings.menu.item.enablePersistentLogs.label=คงราย
 # LOCALIZATION NOTE (webconsole.console.settings.menu.item.enablePersistentLogs.tooltip)
 webconsole.console.settings.menu.item.enablePersistentLogs.tooltip=หากคุณเปิดใช้งานตัวเลือกนี้ ผลลัพธ์จะไม่ถูกล้างในแต่ละครั้งที่คุณนำทางไปยังหน้าใหม่
 
-# LOCALIZATION NOTE (webconsole.console.settings.menu.item.eagerEvaluation.label)
-webconsole.console.settings.menu.item.eagerEvaluation.label=การประเมินผลลัพธ์แบบทันที
-# LOCALIZATION NOTE (webconsole.console.settings.menu.item.eagerEvaluation.tooltip)
-webconsole.console.settings.menu.item.eagerEvaluation.tooltip=หากคุณเปิดใช้งานตัวเลือกนี้ โปรแกรมจะประเมินผลลัพธ์โดยทันทีขณะที่คุณพิมพ์ข้อความลงไป
-
 # LOCALIZATION NOTE (webconsole.console.settings.menu.item.instantEvaluation.label)
+webconsole.console.settings.menu.item.instantEvaluation.label=การประเมินผลแบบทันที
 # LOCALIZATION NOTE (webconsole.console.settings.menu.item.instantEvaluation.tooltip)
+webconsole.console.settings.menu.item.instantEvaluation.tooltip=หากคุณเปิดใช้งานตัวเลือกนี้ โปรแกรมจะประเมินผลลัพธ์โดยทันทีขณะที่คุณพิมพ์ข้อความลงไป
 
 # LOCALIZATION NOTE (browserconsole.contentMessagesCheckbox.label)
 # Label used in the browser console filter bar. This label is used for a checkbox that
@@ -584,3 +591,6 @@ webconsole.input.selector.top=ด้านบน
 # shown when users select a thread that they want to evaluate an
 # expression for.
 webconsole.input.selector.tooltip=เลือกบริบทการประเมิน
+
+# LOCALIZATION NOTE (webconsole.group.cookieSameSiteLaxByDefaultEnabled): do not translate 'sameSite'.
+# LOCALIZATION NOTE (webconsole.group.cookieSameSiteLaxByDefaultDisabled): do not translate 'sameSite'.
