Pontoon: Update Croatian (hr) localization of Firefox Co-authored-by: Milo <mail@milotype.de>

--- a/hr/browser/chrome/browser/browser.properties
+++ b/hr/browser/chrome/browser/browser.properties
@@ -6,8 +6,8 @@ nv_timeout=Vrijeme je isteklo
 openFile=Otvori datoteku
 
 droponhometitle=Postavi početnu stranicu
-droponhomemsg=Želite li postaviti ovaj dokument za svoju početnu stranicu?
-droponhomemsgMultiple=Želite li postaviti ove dokumente za svoje nove početne stranice?
+droponhomemsg=Želiš li postaviti ovaj dokument kao tvoju početnu stranicu?
+droponhomemsgMultiple=Želiš li postaviti ovaj dokument kao tvoju početnu stranicu?
 
 # context menu strings
 
@@ -323,7 +323,7 @@ keywordURIFixup.dismiss.accesskey=N
 pluginInfo.unknownPlugin=Nepoznato
 
 # Flash activation doorhanger UI
-flashActivate.message=Želite li omogućiti Adobe Flash na ovoj stranici? Adobe Flash omogućite samo na stranicama kojima vjerujete.
+flashActivate.message=Želiš li dozvoliti upotrebu Adobe Flasha na ovoj stranici? Dozvoli upotrebu Adobe Flasha samo na stranicama kojima vjeruješ.
 flashActivate.outdated.message=Želiš li dozvoliti upotrebu zastarjele Adobe Flash verzije na ovoj stranici? Zastarjela verzija može loše utjecati na performansu i sigurnost tvog preglednika.
 flashActivate.remember=Zapamti ovu odluku
 flashActivate.noAllow=Nemoj dozvoliti
@@ -946,7 +946,7 @@ getUserMedia.remember=Zapamti moju odluku
 #                    getUserMedia.reasonForNoPermanentAllow.insecure):
 # %S is brandShortName
 getUserMedia.reasonForNoPermanentAllow.screen3=%S ne može dozvoliti trajni pristup tvom ekranu.
-getUserMedia.reasonForNoPermanentAllow.audio=%S ne može trajno dozvoliti pristup zvuku kartice jer mora pitati koju karticu želite dijeliti.
+getUserMedia.reasonForNoPermanentAllow.audio=%S ne može trajno dozvoliti pristup zvuku kartice, jer mora pitati koju karticu želiš dijeliti.
 getUserMedia.reasonForNoPermanentAllow.insecure=Veza s ovom stranicom nije sigurna. Kako bismo te zaštitili, %S će dozvoliti pristup samo za trajanja ove sesije.
 
 getUserMedia.sharingMenu.label = Kartice koje dijele uređaje
@@ -1156,7 +1156,7 @@ decoder.decodeWarning.message = Pojavila se greška koja se može ispraviti tije
 # LOCALIZATION NOTE (captivePortal.infoMessage3):
 # Shown in a notification bar when we detect a captive portal is blocking network access
 # and requires the user to log in before browsing.
-captivePortal.infoMessage3 = Morate se prijaviti na ovu mrežu želite li koristiti internet.
+captivePortal.infoMessage3 = Moraš se prijaviti na ovu mrežu, ako želiš koristiti internet.
 # LOCALIZATION NOTE (captivePortal.showLoginPage2):
 # The label for a button shown in the info bar in all tabs except the login page tab.
 # The button shows the portal login page tab when clicked.
@@ -1228,3 +1228,6 @@ confirmationHint.breakageReport.label = Prijavljeno. Hvala!
 # Used by the export of user's live bookmarks to an OPML file as a title for the file.
 # %S will be replaced with brandShortName
 livebookmarkMigration.title                      = %S žive zabilješke
+
+# LOCALIZATION NOTE (gnomeSearchProviderSearch):
+# Used for search by Gnome Shell activity screen, %S is a searched string.
