Pontoon: Update Croatian (hr) localization of Firefox Co-authored-by: Milo <mail@milotype.de>

--- a/hr/browser/chrome/browser/downloads/downloads.properties
+++ b/hr/browser/chrome/browser/downloads/downloads.properties
@@ -50,7 +50,7 @@ fileMovedOrMissing=Datoteka je premještena ili nedostaje
 # descending order by the unblockType strings, it is higher for files detected
 # as malware and lower for uncommon downloads.
 unblockHeaderUnblock=Stvarno želiš dozvoliti ovo preuzimanje?
-unblockHeaderOpen=Jeste li sigurni da želite otvoriti ovu datoteku?
+unblockHeaderOpen=Stvarno želiš otvoriti ovu datoteku?
 unblockTypeMalware=Ova datoteka sadrži virus ili drugu vrstu malwarea koja može naštetiti tvom računalu.
 unblockTypePotentiallyUnwanted2=Ova datoteka je maskirana kao korisna, ali može na nepredviđen način promijeniti tvoje programe i postavke.
 unblockTypeUncommon2=Ova se datoteka obično ne preuzima i možda nije sigurna za otvaranje. Može sadržavati virus ili na nepredviđen način promijeniti tvoje programe i postavke.
