--- a/hr/browser/chrome/browser/tabbrowser.properties
+++ b/hr/browser/chrome/browser/tabbrowser.properties
@@ -14,7 +14,7 @@ tabs.closeAndQuitTitleTabsWin=Izađi i zatvori kartice?
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # The singular form is not considered since this string is used only for
 # multiple tabs.
-tabs.closeWarningMultiple=Zatvorit ćete #1 karticu. Jeste li sigurni da želite nastaviti?;Zatvorit ćete #1 kartice. Jeste li sigurni da želite nastaviti?;Zatvorit ćete #1 kartica. Jeste li sigurni da želite nastaviti?
+tabs.closeWarningMultiple=;Zatvorit ćeš #1 kartice. Stvarno želiš nastaviti?;Zatvorit ćeš #1 kartica. Stvarno želiš nastaviti?
 # LOCALIZATION NOTE (tabs.closeWarningMultipleSessionRestore2):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
