Pontoon: Update Croatian (hr) localization of Firefox Co-authored-by: Milo <mail@milotype.de>

--- a/hr/browser/installer/nsisstrings.properties
+++ b/hr/browser/installer/nsisstrings.properties
@@ -51,7 +51,7 @@ WARN_MANUALLY_CLOSE_APP_LAUNCH=$BrandShortName je već pokrenut.\n\nZatvori $Bra
 
 ERROR_DOWNLOAD_CONT=Hmm. Iz nekog razloga nismo mogli instalirati $BrandShortName.\nOdaberi "U redu" za ponovni pokušaj.
 
-STUB_CANCEL_PROMPT_HEADING=Želite li instalirati $BrandShortName?
+STUB_CANCEL_PROMPT_HEADING=Želiš li instalirati $BrandShortName?
 STUB_CANCEL_PROMPT_MESSAGE=Ako otkažete, $BrandShortName neće biti instaliran.
 STUB_CANCEL_PROMPT_BUTTON_CONTINUE=Instaliraj $BrandShortName
 STUB_CANCEL_PROMPT_BUTTON_EXIT=Otkaži
