--- a/hr/browser/installer/override.properties
+++ b/hr/browser/installer/override.properties
@@ -40,7 +40,7 @@ ClickInstall=Kliknite Instalacija za početak instalacije.
 ClickUninstall=Kliknite Uklanjenje za početak uklanjanja.
 Completed=Dovršeno
 LicenseTextRB=Pregledaj licencni ugovor prije nego što instaliraš $BrandFullNameDA. Ako prihvaćaš sve uvjete sporazuma, odaberi prvu opciju. $_CLICK
-ComponentsText=Označite komponente koje želite instalirati i odznačite one koje ne želite instalirati. $_CLICK
+ComponentsText=Označi komponente koje želiš instalirati i odznači one, koje ne želiš instalirati. $_CLICK
 ComponentsSubText2_NoInstTypes=Odaberi komponente za instalaciju:
 DirText=Instalacija će instalirati $BrandFullNameDA u sljedeću mapu. Za instalaciju u drugu mapu, klikni Pregledaj i odaberi jednu drugu mapu. $_CLICK
 DirSubText=Mapa za instalaciju
