--- a/hr/devtools/client/aboutdebugging.properties
+++ b/hr/devtools/client/aboutdebugging.properties
@@ -211,4 +211,4 @@ multiProcessWarningUpdateLink2 = Isključivanje višestrukih procesa sadržaja
 # LOCALIZATION NOTE (multiProcessWarningConfirmUpdate2):
 # This string is displayed as a confirmation message when the user clicks on
 # the multiProcessWarningUpdateLink in about:debugging#workers
-multiProcessWarningConfirmUpdate2 = Želite li isključiti višestruke procese?
+multiProcessWarningConfirmUpdate2 = Isključiti višestruke procese?
