--- a/hr/dom/chrome/dom/dom.properties
+++ b/hr/dom/chrome/dom/dom.properties
@@ -34,7 +34,7 @@ EditorFileDropFailed=Ispuštanje datoteke u contenteditable element neuspješno:
 FormValidationTextTooLong=Skratite ovaj tekst na %S ili manje znakova (trenutno koristite %S znakova).
 FormValidationTextTooShort=Koristite najmanje %S znakova (trenutno koristite %S znakova).
 FormValidationValueMissing=Ispunite ovo polje.
-FormValidationCheckboxMissing=Ako želite nastaviti, označite ovu kućicu.
+FormValidationCheckboxMissing=Ako želiš nastaviti, označi ovu opciju.
 FormValidationRadioMissing=Odaberi jednu od ovih opcija.
 FormValidationFileMissing=Odaberi datoteku.
 FormValidationSelectMissing=Odaberi stavku s popisa.
