--- a/hr/netwerk/necko.properties
+++ b/hr/netwerk/necko.properties
@@ -23,7 +23,7 @@
 27=Početak FTP prijenosa...
 28=FTP prijenos dovršen
 
-RepostFormData=Ova web stranica se premještava na novu lokaciju. Želite li poslati upisane podatke formulara na novu lokaciju?
+RepostFormData=Ova se web-stranica premješta na novu lokaciju. Želiš li poslati upisane podatke u obrascu na novu lokaciju?
 
 # Directory listing strings
 DirTitle=Indeks od %1$S
@@ -37,7 +37,7 @@ DirFileLabel=Datoteka:\u0020
 PhishingAuth=Posjetit češ „%1$S”. Ova te stranica može prevariti i uvjeriti da posjećuješ drugu stranicu. Prema tome, oprez!
 PhishingAuthAccept=Razumijem i bit ću vrlo oprezan/na
 
-SuperfluousAuth=Upravo ćete se prijaviti na stranicu "%1$S" s korisničkim imenom "%2$S", ali adresa ne zahtijeva prijavu. Možda se radi o pokušaju prijevare.\n\nJe li "%1$S" stranica koju želite posjetiti?
+SuperfluousAuth=Prijavit ćeš se na stranicu „%1$S” s korisničkim imenom „%2$S”, ali adresa ne zahtijeva prijavu. Možda se radi o pokušaju prijevare.\n\nJe li „%1$S” stranica koju želiš posjetiti?
 AutomaticAuth=Upravo ćete se prijaviti na stranicu "%1$S" s korisničkim imenom "%2$S".
 
 TrackerUriBlocked=Resurs pri “%1$S” je blokiran jer je blokiranje sadržaja uključeno.
@@ -56,6 +56,8 @@ CookieAllowedForTrackerByStorageAccessAPI=Pristup spremištu je dozvoljen za pro
 CookieAllowedForOriginOnTrackerByHeuristic=Pristup spremištu automatski je odobren za „%3$S”, kojeg je otvorio program za praćenje „%2$S” na „%1$S”.
 # LOCALIZATION NOTE (CookieAllowedForTrackerByHeuristic): %2$S and %1$S are URLs.
 CookieAllowedForTrackerByHeuristic=Pristup spremištu automatski je dozvoljen programu za praćenje „%2$S” na „%1$S”.
+
+# LOCALIZATION NOTE (CookieAllowedForFpiByHeuristic): %2$S and %1$S are URLs.
 
 # LOCALIZATION NOTE(CookieRejectedNonRequiresSecure): %1$S is the cookie name. Do not localize "sameSite=none" and "secure".
 CookieRejectedNonRequiresSecure=Kolačić “%1$S” je odbijen iz razloga što ima “sameSite=none” atribut, ali nedostaje “secure” atribut.
