--- a/hr/browser/chrome/browser/tabbrowser.properties
+++ b/hr/browser/chrome/browser/tabbrowser.properties
@@ -127,6 +127,6 @@ tabs.containers.tooltip=%1$S – %2$S
 # These items are moved from chrome/browser/places/places.properties
 # Now they are not specific to bookmark.
 tabs.openWarningTitle=Potvrdi otvaranje
-tabs.openWarningMultipleBranded=Otvorit ćete %S kartica. Ovo bi moglo usporiti %S dok se stranice učitavaju. Jeste li sigurni da želite li nastaviti?
+tabs.openWarningMultipleBranded=Otvorit ćeš %S kartice(a). Ovo bi moglo usporiti %S dok se stranice učitavaju. Stvarno želiš nastaviti?
 tabs.openButtonMultiple=Otvori kartice
 tabs.openWarningPromptMeBranded=Upozori me kod otvaranja više kartica koje bi moglo usporiti %S
