--- a/hr/browser/installer/mui.properties
+++ b/hr/browser/installer/mui.properties
@@ -26,7 +26,7 @@ MUI_TEXT_WELCOME_INFO_TEXT=Ovaj te čarobnjak vodi kroz instalaciju $BrandFullNa
 MUI_TEXT_COMPONENTS_TITLE=Odaberi komponente
 MUI_TEXT_COMPONENTS_SUBTITLE=Odaberi $BrandFullNameDA funkcije, koje želiš instalirati.
 MUI_INNERTEXT_COMPONENTS_DESCRIPTION_TITLE=Opis
-MUI_INNERTEXT_COMPONENTS_DESCRIPTION_INFO=Postavite miš nad komponentu čiji opis želite vidjeti.
+MUI_INNERTEXT_COMPONENTS_DESCRIPTION_INFO=Postavi miša nad komponentu čiji opis želiš vidjeti.
 MUI_TEXT_DIRECTORY_TITLE=Odaberi lokaciju instalacije
 MUI_TEXT_DIRECTORY_SUBTITLE=Odaberi mapu u koju će se instalirati $BrandFullNameDA.
 MUI_TEXT_INSTALLING_TITLE=Instalacija
@@ -44,7 +44,7 @@ MUI_TEXT_FINISH_REBOOTLATER=Ponovo ću pokrenuti kasnije
 MUI_TEXT_STARTMENU_TITLE=Odaberi mapu u izborniku Start
 MUI_TEXT_STARTMENU_SUBTITLE=Odaberi mapu u izborniku Start za $BrandFullNameDA prečace.
 MUI_INNERTEXT_STARTMENU_TOP=Odaberi mapu u zborniku Start u kojem će biti izrađeni prečaci do programa. Možeš upisati i jedno ime za generiranje nove mape.
-MUI_TEXT_ABORTWARNING=Jeste li sigurni da želite prekinuti $BrandFullName instalaciju?
+MUI_TEXT_ABORTWARNING=Stvarno želiš prekinuti $BrandFullName instalaciju?
 MUI_UNTEXT_WELCOME_INFO_TITLE=Dobrodošli u $BrandFullNameDA čarobljak za uklanjanje
 MUI_UNTEXT_WELCOME_INFO_TEXT=Ovaj te čarobnjak vodi kroz proces deinstaliranja $BrandFullNameDA.\n\nPrije pokretanja deinstaliranja, provjeri da $BrandFullNameDA nije pokrenut.\n\n$_CLICK
 MUI_UNTEXT_CONFIRM_TITLE=Ukloni $BrandFullNameDA
@@ -58,4 +58,4 @@ MUI_UNTEXT_ABORT_SUBTITLE=Uklanjenje nije uspješno završeno.
 MUI_UNTEXT_FINISH_INFO_TITLE=Završetak $BrandFullNameDA čarobnjaka za uklanjanje
 MUI_UNTEXT_FINISH_INFO_TEXT=$BrandFullNameDA je uklonjen s tvog računala.\n\nZa zatvaranje čarobnjaka, klikni Završi.
 MUI_UNTEXT_FINISH_INFO_REBOOT=Računalo se mora ponovo pokrenuti radi završetka deinstalacije $BrandFullNameDA. Želiš li to sada učiniti?
-MUI_UNTEXT_ABORTWARNING=Jeste li sigurni da želite prekinuti $BrandFullName uklanjenje?
+MUI_UNTEXT_ABORTWARNING=Stvarno želiš prekinuti deinstalaciju $BrandFullName-a?
