Pontoon: Update Croatian (hr) localization of Firefox Co-authored-by: Milo <mail@milotype.de>

--- a/hr/security/manager/chrome/pippki/pippki.properties
+++ b/hr/security/manager/chrome/pippki/pippki.properties
@@ -5,7 +5,7 @@
 # Download Cert dialog
 # LOCALIZATION NOTE(newCAMessage1):
 # %S is a string representative of the certificate being downloaded/imported.
-newCAMessage1=Želite li vjerovati "%S" za sljedeće svrhe?
+newCAMessage1=Želiš li vjerovati „%S” za sljedeće svrhe?
 unnamedCA=Certifikacijsko tijelo (bezimeno)
 
 # PKCS#12 file dialogs
