--- a/hr/toolkit/chrome/mozapps/downloads/downloads.properties
+++ b/hr/toolkit/chrome/mozapps/downloads/downloads.properties
@@ -27,10 +27,10 @@ downloadErrorGeneric=Ovo preuzimanje se ne može spremiti zbog nepoznate greške
 
 # LOCALIZATION NOTE: we don't have proper plural support in the CPP code; bug 463102
 quitCancelDownloadsAlertTitle=Prekinuti sva preuzimanja?
-quitCancelDownloadsAlertMsg=Ako izađete sada, 1 preuzimanje će biti otkazano. Jeste li sigurni da želite izaći?
-quitCancelDownloadsAlertMsgMultiple=Ako izađete sada, %S preuzimanja će biti otkazana. Jeste li sigurni da želite izaći?
-quitCancelDownloadsAlertMsgMac=Ako odustanete sada, 1 preuzimanje će biti otkazano. Jeste li sigurni da želite odustati?
-quitCancelDownloadsAlertMsgMacMultiple=Ako odustanete sada, %S preuzimanja će biti otkazano. Jeste li sigurni da želite odustati?
+quitCancelDownloadsAlertMsg=Ako sada izađeš, prekinut će se jedno preuzimanje. Stvarno želiš izaći?
+quitCancelDownloadsAlertMsgMultiple=Ako sada izađeš, prekinut će se %S preuzimanja. Stvarno želiš izaći?
+quitCancelDownloadsAlertMsgMac=Ako sada zatvoriš program, prekinut će se jedno preuzimanje. Stvarno želiš zatvoriti program?
+quitCancelDownloadsAlertMsgMacMultiple=Ako sada izađeš, prekinut će se %S preuzimanja. Stvarno želiš izaći?
 offlineCancelDownloadsAlertTitle=Prekinuti sva preuzimanja?
 offlineCancelDownloadsAlertMsg=Ako aktiviraš izvanmrežni način rada, prekinut ćeš jedno preuzimanje. Stvarno želiš nastaviti?
 offlineCancelDownloadsAlertMsgMultiple=Ako aktiviraš izvanmrežni način rada, prekinut ćeš %S preuzimanja. Stvarno želiš nastaviti?
