--- a/hr/toolkit/chrome/global/browser.properties
+++ b/hr/toolkit/chrome/global/browser.properties
@@ -10,5 +10,5 @@ browsewithcaret.checkButtonLabel=Da
 plainText.wordWrap=Omotaj duge linije
 
 formPostSecureToInsecureWarning.title = Sigurnosno upozorenje
-formPostSecureToInsecureWarning.message = Informacije koje ste unijeli na ovoj stranici će biti poslani putem nesigurne veze koju može pročitati treća strana.\n\nJeste li sigurni da želite poslati ove informacije?
+formPostSecureToInsecureWarning.message = Upisani podaci na ovoj stranici bit će poslani putem nesigurne veze koju može pročitati treća strana.\n\nStvarno želiš poslati ove podatke?
 formPostSecureToInsecureWarning.continue = Nastavi
