Pontoon: Update Croatian (hr) localization of Firefox Co-authored-by: Milo <mail@milotype.de>

--- a/hr/toolkit/chrome/mozapps/profile/profileSelection.properties
+++ b/hr/toolkit/chrome/mozapps/profile/profileSelection.properties
@@ -5,7 +5,7 @@
 # LOCALIZATION NOTE: These strings are used for startup/profile problems and the profile manager.
 
 # Application not responding
-# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
+# LOCALIZATION NOTE (restartTitle, restartMessageNoUnlocker2, restartMessageUnlocker, restartMessageNoUnlockerMac, restartMessageUnlockerMac): Messages displayed when the application is running but is not responding to commands. %S is the application name.
 restartTitle=Zatvori %S
 restartMessageNoUnlocker=%S je već pokrenut, ali ne odgovara. Za otvaranje novog prozora, najprije moraš zatvoriti postojeći %S proces ili ponovo pokrenuti tvoj sustav.
 restartMessageUnlocker=%S je već pokrenut, ali ne odgovara. Stari %S proces mora biti zatvoren da bi se otvorio novi prozor.
@@ -33,7 +33,7 @@ profileNameEmpty=Prazno ime profila nije dopušteno.
 invalidChar=Znak „%S” nije dopušten u imenima profila. Odaberi jedno drugo ime.
 
 deleteTitle=Izbriši profil
-deleteProfileConfirm=Brisanje profile će ukloniti profil s liste dostupnih profila i neće se moći vratiti.\nMožete odabrati i brisanje podataka profila, uključujući vaše postavke, certifikate i ostale korisničke podatke. Ova će opcija obrisati mapu "%S" i neće se moći vratiti.\nŽelite li obrisati datoteke profila?
+deleteProfileConfirm=Brisanje profila uklonit će profil s popisa dostupnih profila i neće se moći vratiti.\nMožeš odabrati i brisanje podataka profila, uključujući tvoje postavke, certifikate i ostale korisničke podatke. Ova će opcija obrisati mapu „%S” i neće se moći vratiti.\nŽeliš li obrisati datoteke profila?
 deleteFiles=Obriši datoteke
 dontDeleteFiles=Nemoj obrisati datoteke
 
