--- a/hr/toolkit/chrome/mozapps/update/updates.properties
+++ b/hr/toolkit/chrome/mozapps/update/updates.properties
@@ -12,7 +12,7 @@ updateName=%S %S
 # %2$S is the update version - provided by the update xml. Ex: version 10.0.5
 # %3$S is the build identifier - provided by the update xml. Ex: 20081022033543
 updateNightlyName=%1$S %2$S %3$S nightly
-intro_major=Želite li sada ažurirati %1$S %2$S?
+intro_major=Želiš li sada aktualizirati %1$S %2$S?
 intro_minor=Dostupna je sigurnosna dopuna za %1$S:
 
 # LOCALIZATION NOTE: When present %S is brandShortName
