--- a/hr/toolkit/chrome/passwordmgr/passwordmgr.properties
+++ b/hr/toolkit/chrome/passwordmgr/passwordmgr.properties
@@ -8,8 +8,8 @@ rememberPassword = Koristi upravljača lozinki za pamćenje ove lozinke.
 savePasswordTitle = Potvrdi
 # LOCALIZATION NOTE (saveLoginMsg, saveLoginMsgNoUser):
 # %1$S is brandShortName, %2$S is the login's hostname.
-saveLoginMsg = Želite li da %1$S spremi prijavu za %2$S?
-saveLoginMsgNoUser = Želite li da %1$S spremi lozinku za %2$S?
+saveLoginMsg = Želiš li spremiti %1$S prijavu za %2$S?
+saveLoginMsgNoUser = Želiš li spremiti %1$S lozinku za %2$S?
 saveLoginButtonAllow.label = Spremi
 saveLoginButtonAllow.accesskey = S
 saveLoginButtonDeny.label = Nemoj spremiti
@@ -17,8 +17,8 @@ saveLoginButtonDeny.accesskey = j
 saveLoginButtonNever.label = Nikad ne spremaj
 saveLoginButtonNever.accesskey = e
 updateLoginMsg = Ažurirati ovu prijavu?
-updateLoginMsgNoUser = Želite li ažurirati ovu lozinku?
-updateLoginMsgAddUsername = Želite li dodati korisničko ime uz spremljenu lozinku?
+updateLoginMsgNoUser = Želiš li aktualizirati ovu lozinku?
+updateLoginMsgAddUsername = Želiš li dodati korisničko ime uz spremljenu lozinku?
 updateLoginButtonText = Dopuna
 updateLoginButtonAccessKey = V
 updateLoginButtonDeny.label = Nemoj ažuirati
@@ -26,10 +26,10 @@ updateLoginButtonDeny.accesskey = i
 # LOCALIZATION NOTE (rememberPasswordMsg):
 # 1st string is the username for the login, 2nd is the login's hostname.
 # Note that long usernames may be truncated.
-rememberPasswordMsg = Želite li zapamtiti lozinku za "%1$S" pri %2$S?
+rememberPasswordMsg = Želiš li zapamtiti lozinku za „%1$S” pri %2$S?
 # LOCALIZATION NOTE (rememberPasswordMsgNoUsername):
 # String is the login's hostname.
-rememberPasswordMsgNoUsername = Želite li zapamtiti lozinku pri %S?
+rememberPasswordMsgNoUsername = Želiš li zapamtiti lozinku pri %S?
 # LOCALIZATION NOTE (noUsernamePlaceholder):
 # This is displayed in place of the username when it is missing.
 noUsernamePlaceholder=Nema korisničkog imena
@@ -41,10 +41,10 @@ rememberButtonText = &Zapamti
 passwordChangeTitle = Potvrdite promjenu lozinke
 # LOCALIZATION NOTE (updatePasswordMsg):
 # String is the username for the login.
-updatePasswordMsg = Želite li ažurirati spremljenu lozinku za "%S"?
-updatePasswordMsgNoUser = Želite li ažurirati spremljenu lozinku?
+updatePasswordMsg = Želiš li aktualizirati spremljenu lozinku za „%S”?
+updatePasswordMsgNoUser = Želiš li aktualizirati spremljenu lozinku?
 userSelectText2 = Odaberi prijavu koju želiš aktualizirati:
-removeLoginPrompt=Jeste li sigurni da želite ukloniti ovu prijavu?
+removeLoginPrompt=Stvarno želiš ukloniti ovu prijavu?
 removeLoginTitle=Ukloni prijavu
 loginsDescriptionAll2=Prijave za sljedeće stranice su spremljene na tvom računalu
 
