Pontoon: Update Korean (ko) localization of Firefox Co-authored-by: Kim YoungCheon <circcc@gmail.com>

--- a/ko/devtools/client/jsonview.properties
+++ b/ko/devtools/client/jsonview.properties
@@ -15,7 +15,7 @@
 # LOCALIZATION NOTE (jsonViewer.tab.JSON, jsonViewer.tab.RawData,
 # jsonViewer.tab.Headers): Label for a panel tab.
 jsonViewer.tab.JSON=JSON
-jsonViewer.tab.RawData=원본 데이터
+jsonViewer.tab.RawData=원시 데이터
 jsonViewer.tab.Headers=헤더
 
 # LOCALIZATION NOTE (jsonViewer.responseHeaders, jsonViewer.requestHeaders):
