--- a/ko/devtools/client/netmonitor.properties
+++ b/ko/devtools/client/netmonitor.properties
@@ -482,7 +482,7 @@ netRequest.response=응답
 # LOCALIZATION NOTE (netRequest.rawData): A label used for a section
 # in Response tab. This section displays raw response body as it's
 # been received from the backend (debugger server)
-netRequest.rawData=원본 데이터
+netRequest.rawData=원시 데이터
 
 # LOCALIZATION NOTE (netRequest.xml): A label used for a section
 # in Response tab. This section displays parsed XML response body.
@@ -795,7 +795,7 @@ netmonitor.ws.type.received=받음
 
 # LOCALIZATION NOTE (netmonitor.ws.rawData.header): This is the label displayed
 # in the messages panel identifying the raw data.
-netmonitor.ws.rawData.header=원본 데이터 (%S)
+netmonitor.ws.rawData.header=원시 데이터 (%S)
 
 # LOCALIZATION NOTE (netmonitor.search.toolbar.inputPlaceholder): This is the label
 # displayed in the search toolbar for the search input as the placeholder.
@@ -1062,6 +1062,11 @@ netmonitor.toolbar.timings=타이밍
 # response headers submenu.
 netmonitor.toolbar.responseHeaders=응답 헤더
 
+# LOCALIZATION NOTE (netmonitor.headers.toolbar.block): This is the
+# label displayed in the network details headers tab identifying the
+# block url toolbar button.
+netmonitor.headers.toolbar.block=차단
+
 # LOCALIZATION NOTE (netmonitor.summary.url): This is the label displayed
 # in the network details headers tab identifying the URL.
 netmonitor.summary.url=요청 URL:
@@ -1111,6 +1116,11 @@ netmonitor.summary.rawHeaders.responseHeaders=응답 헤더:
 # LOCALIZATION NOTE (netmonitor.summary.size): This is the label displayed
 # in the network details headers tab identifying the headers size.
 netmonitor.summary.size=헤더 크기:
+
+# LOCALIZATION NOTE (netmonitor.headers.raw): This is the label displayed
+# on the button in the headers tab that toggle view for raw request/response headers
+# from the currently displayed request
+netmonitor.headers.raw=원시
 
 # LOCALIZATION NOTE (netmonitor.response.name): This is the label displayed
 # in the network details response tab identifying an image's file name.
