--- a/ko/toolkit/chrome/global/aboutWebrtc.properties
+++ b/ko/toolkit/chrome/global/aboutWebrtc.properties
@@ -116,11 +116,11 @@ log_hide_msg = 로그 감추기
 connection_closed = 닫기
 local_candidate = 로컬 후보자
 remote_candidate = 원격 후보자
-raw_candidates_heading = 모든 원본 후보자
-raw_local_candidate = 원본 지역 후보자
-raw_remote_candidate = 원본 원격 후보자
-raw_cand_show_msg = 원본 후보자 보기
-raw_cand_hide_msg = 원본 후보자 감추기
+raw_candidates_heading = 모든 원시 후보자
+raw_local_candidate = 원시 지역 후보자
+raw_remote_candidate = 원시 원격 후보자
+raw_cand_show_msg = 원시 후보자 보기
+raw_cand_hide_msg = 원시 후보자 감추기
 priority = 우선순위
 fold_show_msg = 상세 보기
 fold_show_hint = 섹션 펼치기
