--- a/ko/browser/chrome/browser/activity-stream/newtab.properties
+++ b/ko/browser/chrome/browser/activity-stream/newtab.properties
@@ -79,7 +79,7 @@ search_web_placeholder=웹 검색
 # the topstories section title to provide additional information about
 # how the stories are selected.
 section_disclaimer_topstories=Pocket을 통해서 사용자가 읽은 글을 기반으로 가장 재미있는 글을 찾아주는 글들을 읽어보세요. 이제 Mozilla와 함께 합니다.
-section_disclaimer_topstories_linktext=어떻게 작동 하는지 알아봅시다.
+section_disclaimer_topstories_linktext=작동 방식 알아보기.
 # LOCALIZATION NOTE (section_disclaimer_topstories_buttontext): The text of
 # the button used to acknowledge, and hide this disclaimer in the future.
 section_disclaimer_topstories_buttontext=확인
