--- a/he/browser/extensions/fxmonitor/fxmonitor.properties
+++ b/he/browser/extensions/fxmonitor/fxmonitor.properties
@@ -41,5 +41,5 @@ fxmonitor.checkButton.accessKey=ב
 fxmonitor.dismissButton.label=סגירה
 fxmonitor.dismissButton.accessKey=ס
 # %S is replaced with fxmonitor.brandName.
-fxmonitor.neverShowButton.label=לעולם לא להציג התראות של %S
+fxmonitor.neverShowButton.label=לעולם לא להציג התרעות של %S
 fxmonitor.neverShowButton.accessKey=ל
